I need to use the -m flag because I don't like this extra edit in nano step!

--- a/css/main.css
+++ b/css/main.css
@@ -110,7 +110,8 @@ body {
       width: 20px;
       background: grey;
       border-radius: 50%;
-      border: 2px solid darkslategrey; }
+      border: 2px solid darkslategrey;
+      }
     .center #top-controls #start > div {
       background: red; }
     .center #top-controls #strict > div {
