--- a/css/main.css
+++ b/css/main.css
@@ -111,7 +111,10 @@ body {
       background: grey;
       border-radius: 50%;
       border: 2px solid darkslategrey;
-      }
+      box-shadow: 0px 2px 3px 0px #3b3b3b; }
+    .center #top-controls .button:active {
+      margin-bottom: 5px;
+      box-shadow: 0px 1px 1px 0px #3b3b3b; }
     .center #top-controls #start > div {
       background: red; }
     .center #top-controls #strict > div {
@@ -171,3 +174,17 @@ body {
 
 .can-click {
   cursor: pointer; }
+
+.blink {
+  font-size: 40px;
+  animation: blinker 1s linear infinite; }
+
+@keyframes blinker {
+  0% {
+    opacity: 1; }
+
+  50% {
+    opacity: 0; }
+
+  100% {
+    opacity: 1; } }
