--- a/css/main.css
+++ b/css/main.css
@@ -3,18 +3,22 @@ html {
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
-  background-size: cover; }
+  background-size: cover;
+}
 
 body {
-  color: white; }
+  color: white;
+  pointer-events: none;
+}
 
 #main-container {
   width: 500px;
-  height: 500px;
-  margin: 50px auto 0;
+  height: 100vh;
+  margin: 0 auto;
   display: flex;
   align-items: center;
-  justify-content: center; }
+  justify-content: center;
+}
 
 #game-container {
   position: relative;
@@ -25,34 +29,55 @@ body {
   -webkit-user-select: none;
   -moz-user-select: none;
   -ms-user-select: none;
-  user-select: none; }
+  user-select: none;
+}
 
 .row {
-  display: flex; }
-  .row .pad {
-    margin: 10px;
-    width: 200px;
-    height: 200px; }
-  .row .p-1 {
-    border-top-left-radius: 100%;
-    background: #05a052; }
-  .row .p-2 {
-    border-top-right-radius: 100%;
-    background: #c91b1c; }
-  .row .p-3 {
-    border-bottom-left-radius: 100%;
-    background: #d9bc18; }
-  .row .p-4 {
-    border-bottom-right-radius: 100%;
-    background: #017abf; }
-  .row .p-1-active {
-    background: #08f780; }
-  .row .p-2-active {
-    background: #fe2323; }
-  .row .p-3-active {
-    background: #fbff00; }
-  .row .p-4-active {
-    background: #1dadff; }
+  display: flex;
+}
+
+.pad {
+  margin: 10px;
+  width: 200px;
+  height: 200px;
+  pointer-events: none;
+}
+
+.p-1 {
+  border-top-left-radius: 100%;
+  background: #05a052;
+}
+
+.p-2 {
+  border-top-right-radius: 100%;
+  background: #c91b1c;
+}
+
+.p-3 {
+  border-bottom-left-radius: 100%;
+  background: #d9bc18;
+}
+
+.p-4 {
+  border-bottom-right-radius: 100%;
+  background: #017abf;
+}
+
+.p-1-active {
+  background: #08f780;
+}
+
+.p-2-active {
+  background: #fe2323;
+}
+
+.p-3-active {
+  background: #fbff00;
+}
+
+.p-4-active {
+  background: #1dadff;
+}
 
 .center {
   background: #dbdbdb;
@@ -63,84 +88,114 @@ body {
   height: 200px;
   border-radius: 100%;
   border: 15px solid #2a2a2a;
-  overflow: hidden; }
-  .center #cover {
-    position: absolute;
-    top: -4px;
-    width: 200px;
-    height: 95px;
-    background: black;
-    text-align: center;
-    border-radius: 100% 100% 0 0; }
-    .center #cover h1 {
-      color: #dbdbdb;
-      margin: 32px 0 0 0;
-      font-family: 'Squada One', cursive;
-      font-size: 64px; }
-  .center #top-controls {
-    position: relative;
-    display: flex;
-    justify-content: center;
-    top: 95px; }
-    .center #top-controls h1,
-    .center #top-controls h3 {
-      margin: 0; }
-    .center #top-controls > div {
-      display: flex;
-      align-items: center;
-      flex-direction: column;
-      justify-content: flex-end;
-      margin: 0 5px;
-      font-size: 0.8em;
-      font-family: Arial, Helvetica, sans-serif;
-      color: black; }
-    .center #top-controls #led {
-      border: 2px solid black;
-      background: #3b0000;
-      color: #850000;
-      border-radius: 10px;
-      width: 50px;
-      height: 35px;
-      display: flex;
-      align-items: center;
-      justify-content: center; }
-    .center #top-controls .button {
-      margin-bottom: 6px;
-      height: 20px;
-      width: 20px;
-      background: grey;
-      border-radius: 50%;
-      border: 2px solid darkslategrey;
-      box-shadow: 0px 2px 3px 0px #3b3b3b; }
-    .center #top-controls .button:active {
-      margin-bottom: 5px;
-      box-shadow: 0px 1px 1px 0px #3b3b3b; }
-    .center #top-controls #start > div {
-      background: red; }
-    .center #top-controls #strict > div {
-      background: yellow; }
-  .center #bottom-controls {
-    margin: 0 auto;
-    width: 107px;
-    position: relative;
-    display: flex;
-    align-items: center;
-    top: 108px; }
-    .center #bottom-controls h3 {
-      margin: 0;
-      color: black; }
-    .center #bottom-controls .on-switch {
-      margin: 0 5px;
-      width: 100%;
-      height: 14px;
-      border-radius: 2px;
-      background: #2a2a2a;
-      padding: 2px 2px; }
-    .center #bottom-controls .switch {
-      height: 100%;
-      width: 50%;
-      background: #3582da;
-      border-radius: 2px; }
+  overflow: hidden;
+}
+
+#cover {
+  position: absolute;
+  top: -4px;
+  width: 200px;
+  height: 95px;
+  background: black;
+  text-align: center;
+  border-radius: 100% 100% 0 0;
+}
+
+#cover h1 {
+  color: #dbdbdb;
+  margin: 32px 0 0 0;
+  font-family: 'Squada One', cursive;
+  font-size: 64px;
+}
+
+#top-controls {
+  position: relative;
+  display: flex;
+  justify-content: center;
+  top: 95px;
+}
+
+#top-controls h1,
+#top-controls h3 {
+  margin: 0;
+}
+
+#top-controls>div {
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  justify-content: flex-end;
+  margin: 0 5px;
+  font-size: 0.8em;
+  font-family: Arial, Helvetica, sans-serif;
+  color: black;
+}
+
+#led {
+  border: 2px solid black;
+  background: #3b0000;
+  color: #850000;
+  border-radius: 10px;
+  width: 50px;
+  height: 35px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.button {
+  pointer-events: none;
+  margin-bottom: 6px;
+  height: 20px;
+  width: 20px;
+  background: grey;
+  border-radius: 50%;
+  border: 2px solid darkslategrey;
+  box-shadow: 0px 2px 3px 0px #3b3b3b;
+}
+
+.button:active {
+  margin-bottom: 5px;
+  box-shadow: 0px 1px 1px 0px #3b3b3b;
+}
+
+#start>div {
+  background: red;
+}
+
+#strict>div {
+  background: yellow;
+}
+
+#bottom-controls {
+  margin: 0 auto;
+  width: 107px;
+  position: relative;
+  display: flex;
+  align-items: center;
+  top: 108px;
+}
+
+#bottom-controls h3 {
+  margin: 0;
+  color: black;
+}
+
+.on-switch {  
+  margin: 0 5px;
+  width: 100%;
+  height: 14px;
+  border-radius: 2px;
+  background: #2a2a2a;
+  padding: 2px 2px;
+}
+
+.switch {
+  height: 100%;
+  width: 50%;
+  background: #3582da;
+  border-radius: 2px;
+}
 
 .center::after {
   content: "";
@@ -152,7 +207,8 @@ body {
   opacity: 0;
   transform: rotate(30deg);
   background: rgba(255, 255, 255, 0.13);
-  background: linear-gradient(to right, rgba(255, 255, 255, 0) 0%, rgba(255, 255, 255, 0) 77%, rgba(255, 255, 255, 0.5) 92%, rgba(255, 255, 255, 0) 100%); }
+  background: linear-gradient(to right, rgba(255, 255, 255, 0) 0%, rgba(255, 255, 255, 0) 77%, rgba(255, 255, 255, 0.5) 92%, rgba(255, 255, 255, 0) 100%);
+}
 
 .shine::after {
   opacity: 1;
@@ -160,32 +216,42 @@ body {
   left: -30%;
   transition-property: left, top, opacity;
   transition-duration: 0.7s, 0.7s, 0.15s;
-  transition-timing-function: ease; }
+  transition-timing-function: ease;
+}
 
 .hide-shine::after {
-  display: none; }
+  display: none;
+}
 
 .flex-center {
   display: flex;
-  align-items: center; }
+  align-items: center;
+}
 
 .on-top {
-  z-index: 1; }
+  z-index: 1;
+}
 
 .can-click {
   cursor: pointer;
-  pointer-events: auto; }
+  pointer-events: auto;
+}
 
 .blink {
   font-size: 36px;
-  animation: blinker 1s linear infinite; }
+  animation: blinker 1s linear infinite;
+}
 
 @keyframes blinker {
   0% {
-    opacity: 1; }
+    opacity: 1;
+  }
 
   50% {
-    opacity: 0; }
+    opacity: 0;
+  }
 
   100% {
-    opacity: 1; } }
+    opacity: 1;
+  }
+}
