--- a/css/main.css
+++ b/css/main.css
@@ -12,9 +12,7 @@ body {
 }
 
 #main-container {
-  width: 500px;
   height: 100vh;
-  margin: 0 auto;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -127,7 +125,8 @@ body {
   justify-content: flex-end;
   margin: 0 5px;
   font-size: 0.8em;
-  font-family: Arial, Helvetica, sans-serif;
+  /* font-family: Arial, Helvetica, sans-serif; */
+  /* font-family: 'Squada One', cursive; */
   color: black;
 }
 
@@ -141,6 +140,16 @@ body {
   display: flex;
   align-items: center;
   justify-content: center;
+}
+
+.strict-led {
+  position: absolute;
+  top: 0px;
+  background: black;
+  width: 5px;
+  height: 5px;
+  border: 1px solid #3b3b3b;
+  border-radius: 50%;
 }
 
 .button {
@@ -159,11 +168,11 @@ body {
   box-shadow: 0px 1px 1px 0px #3b3b3b;
 }
 
-#start>div {
+#start .button {
   background: red;
 }
 
-#strict>div {
+#strict .button {
   background: yellow;
 }
 
@@ -181,7 +190,7 @@ body {
   color: black;
 }
 
-.on-switch {  
+.on-switch {
   margin: 0 5px;
   width: 100%;
   height: 14px;
@@ -228,12 +237,12 @@ body {
   align-items: center;
 }
 
-.on-top {
-  z-index: 1;
-}
-
 .can-click {
   cursor: pointer;
+  pointer-events: auto;
+}
+
+.pe {
   pointer-events: auto;
 }
 
