--- a/css/main.css
+++ b/css/main.css
@@ -11,6 +11,13 @@ body {
   pointer-events: none;
 }
 
+h3 {
+  font-weight: normal;
+  font-size: 0.8rem;
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+}
+
+
 #main-container {
   height: 100vh;
   display: flex;
@@ -110,7 +117,7 @@ body {
   position: relative;
   display: flex;
   justify-content: center;
-  top: 95px;
+  top: 98px;
 }
 
 #top-controls h1,
@@ -123,8 +130,9 @@ body {
   align-items: center;
   flex-direction: column;
   justify-content: flex-end;
-  margin: 0 5px;
-  font-size: 0.8em;
+  margin: 0 8px;
+  /* font-size: 0.8em; */
+  /* font-weight: normal; */
   /* font-family: Arial, Helvetica, sans-serif; */
   /* font-family: 'Squada One', cursive; */
   color: black;
@@ -140,6 +148,8 @@ body {
   display: flex;
   align-items: center;
   justify-content: center;
+  /* font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; */
+  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
 
 .strict-led {
@@ -178,11 +188,11 @@ body {
 
 #bottom-controls {
   margin: 0 auto;
-  width: 107px;
+  width: 100px;
   position: relative;
   display: flex;
   align-items: center;
-  top: 108px;
+  top: 110px;
 }
 
 #bottom-controls h3 {
