--- a/css/main.css
+++ b/css/main.css
@@ -1,10 +1,10 @@
 @font-face {
-  font-family: 'Squada One';
-  src: url('../fonts/SquadaOne-Regular.ttf');
+  font-family: "Squada One";
+  src: url("../fonts/SquadaOne-Regular.ttf");
 }
 
 html {
-  background: no-repeat center center fixed url("../img/surface_spots_dark_texture_69707_1920x1080.jpg");
+  background: no-repeat center center fixed url("../img/compressed-bg.jpg");
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
@@ -19,9 +19,8 @@ body {
 h3 {
   font-weight: normal;
   font-size: 0.8rem;
-  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
 }
-
 
 #main-container {
   height: 100vh;
@@ -52,7 +51,6 @@ h3 {
   from {transform: rotate(0deg);}
   to  {transform: rotate(360deg);}
 } */
-
 
 .row {
   display: flex;
@@ -130,7 +128,7 @@ h3 {
 #cover h1 {
   color: #dbdbdb;
   margin: 32px 0 0 0;
-  font-family: 'Squada One', cursive;
+  font-family: "Squada One", cursive;
   font-size: 64px;
 }
 
@@ -146,7 +144,7 @@ h3 {
   margin: 0;
 }
 
-#top-controls>div {
+#top-controls > div {
   display: flex;
   align-items: center;
   flex-direction: column;
@@ -170,7 +168,7 @@ h3 {
   align-items: center;
   justify-content: center;
   /* font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; */
-  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
 }
 
 .strict-led {
@@ -248,7 +246,13 @@ h3 {
   opacity: 0;
   transform: rotate(30deg);
   background: rgba(255, 255, 255, 0.13);
-  background: linear-gradient(to right, rgba(255, 255, 255, 0) 0%, rgba(255, 255, 255, 0) 77%, rgba(255, 255, 255, 0.5) 92%, rgba(255, 255, 255, 0) 100%);
+  background: linear-gradient(
+    to right,
+    rgba(255, 255, 255, 0) 0%,
+    rgba(255, 255, 255, 0) 77%,
+    rgba(255, 255, 255, 0.5) 92%,
+    rgba(255, 255, 255, 0) 100%
+  );
 }
 
 .shine::after {
